# mylang

./: Cargo.toml
src/: lib.rs  main.rs
src/cli/: args.rs
src/samples/: calc.lala  print.lala  program.lala  then.lala  variable.lala
src/syntax/: .pest  array.lala  ast.rs  calc.lala  call.lala  function.lala  if.lala  parser.rs  pipe.lala  then.lala
src/transpiler/: emitter.rs  mod.rs  translator.rs
