[package]
name = "mylang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
lazy_static = "1.4.0"
pest = "2.7.5"
pest_derive = "2.7.5"
swc_common = "0.33.12"
swc_ecma_ast = "0.110.15"
swc_ecma_codegen = "0.146.47"
